--- a/musical_app/templates/base.html
+++ b/musical_app/templates/base.html
@@ -27,6 +27,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/date">Date</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/recommend">Recommend</a>
+          </li>
         </ul>
       </div>
     </nav>
