--- a/musical_app/templates/date.html
+++ b/musical_app/templates/date.html
@@ -14,6 +14,7 @@ Date Index
   <input type="submit" class="btn btn-primary" value="Search" />
 </form>
 
+
 {% if musical_info_list %}
 <table class="table">
   <thead>
@@ -40,7 +41,7 @@ Date Index
       <td>{{ musical_info['rating'] }}</td>
       <td>{{ musical_info['price'] }}</td>
       <td>{{ musical_info['place_nm'] }}</td>
-      <td>{{ musical_info['url'] }}</td>
+      <td><a href={{ musical_info['url'] }}>{{ musical_info['url'] }}</a></td>
     </tr>
     {% endfor %}
   </tbody>
