--- a/musical_app/templates/index.html
+++ b/musical_app/templates/index.html
@@ -2,10 +2,10 @@
 
 
 {% block title  %}
-Busan Musical recommend Application
+Busan Musical Recommend Application
 {% endblock  %}
 
 
 {% block main_body  %}
-Welcome to the page
+Welcome to the page!
 {% endblock  %}
