--- a/musical_app/templates/theater.html
+++ b/musical_app/templates/theater.html
@@ -1,41 +1,51 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Theater Index
+Interested Theater Page
 {% endblock %}
 
 {% block lead %}
-Add or delete theater list
+Add or delete interested theater list
 {% endblock %}
 
 {% block main_body %}
-<form method="POST" action="/api/theater">
-  <input name="theaterid" style="margin-bottom:10px" class="form-control" type="text" placeholder="Enter theater name">
-  <input type="submit" class="btn btn-primary" value="Add" />
-</form>
+<div class="container" style="width: 500px;">
+  <form method="POST" action="/api/theater">
+    <div class="input-group mb-3">
+      <input name="theaterid" style="margin-bottom:10px" class="form-control" type="text" placeholder="Enter theater name">
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary" style="margin-bottom:10px" type="submit">Add</button>
+      </div>
+    </div>
+    <!-- <input name="theaterid" style="margin-bottom:10px" class="form-control" type="text" placeholder="Enter theater name">
+    <input type="submit" class="btn btn-primary" value="Add" /> -->
+  </form>
 
-{% if theater_list %}
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Name</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for theater in theater_list %}
-    <tr>
-      <th scope="row">{{ theater.id }}</th>
-      <td>{{ theater.name }}</td>
-      <td>
-        <a class="btn btn-secondary", href="/api/theater/{{ theater.id }}">
-          Delete
-        </a>
-      </td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+  {% if theater_list %}
+
+  <table class="table" style="text-align: center;">
+    <thead>
+      <tr>
+        <!-- <th scope="col">#</th> -->
+        <th scope="col">Name</th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for theater in theater_list %}
+      <tr>
+        <!-- <th scope="row">{{ theater.id }}</th> -->
+        <th scope="row">{{ theater.name }}</td>
+        <td>
+          <a class="btn btn-outline-secondary", href="/api/theater/{{ theater.id }}">
+            Delete
+          </a>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
 {% endif %}
 
 {% endblock %}
