--- a/musical_app/templates/base.html
+++ b/musical_app/templates/base.html
@@ -3,8 +3,27 @@
   <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     {% block head %} {% endblock %}
+    <style type="text/css">
+    .container-xxl {
+      padding-top: 70px;
+      padding-bottom: auto;
+    }
+    .jumbotron{
+      background-size: cover;
+      background-color: aliceblue;
+      color: dimgray;
+      margin-left: auto;
+      margin-right: auto;
+      width: 1200px;
+    }
+    .navbar{
+      font-family: 'Kiwi Maru', serif;
+    }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -36,12 +55,12 @@
 
     {% block alert %}
     {% endblock %}
-    <div class="container">
+    <div class="container-xxl">
       <div class="jumbotron">
-        <h1 class="display-4">{% block title %}{% endblock %}</h1>
+        <h1 class="display-4" style="font-size: 55px; font-family: 'Kiwi Maru', serif">{% block title %}{% endblock %}</h1>
         <p class="lead">{% block lead %}{% endblock %}</p>
         <hr class="my-4">
-        <p>{% block main_body %}{% endblock %}</p>
+        <p style="font-size: 23px; font-family: 'Kiwi Maru', serif">{% block main_body %}{% endblock %}</p>
       </div>
     </div>
   </body>
