--- a/musical_app/templates/theater.html
+++ b/musical_app/templates/theater.html
@@ -5,7 +5,7 @@ Theater of Interest
 {% endblock %}
 
 {% block lead %}
-Add or delete interested theater list
+Add or delete a list of theaters of interest
 {% endblock %}
 
 {% block main_body %}
