--- a/musical_app/templates/base.html
+++ b/musical_app/templates/base.html
@@ -23,6 +23,25 @@
     .navbar{
       font-family: 'Kiwi Maru', serif;
     }
+    .balloon {  
+      position: relative;
+      background:LightCoral;
+      padding: 10px 50px 10px 50px;
+      margin-left: 70px;
+      border-radius: 5px;
+      font-size: 11pt;
+      color: white;
+    }
+    .balloon:after { 
+      bottom: 100%;
+      border: solid transparent;
+      content:""; 
+      position: absolute;
+      pointer-events: none;
+      border-bottom-color: LightCoral;
+      border-width: 11px;
+      margin-left: -80px;
+    }
     </style>
   </head>
   <body>
@@ -64,4 +83,5 @@
       </div>
     </div>
   </body>
+
 </html>
